CCMSPUI-761 | Created initial open-api-specification.yml for POST /api/v1/submissions endpoint. (#5)
* moved files across

- moved to new repo
- refactored module location and structure
- adds integration and validation tests

* some clean up and tidy up

* pr feedback

* updated test application properties

* CCMSPUI-761 | Created initial open-api-specification.yml for POST /api/v1/submissions endpoint.

* CCMSPUI-761 | Created file upload validator to check if uploaded file is either XML or CSV

* CCMSPUI-761 | Refactored file submission process to utilize new `FileUtil` for temporary file creation and introduced submitBulkClaim() method.

* CCMSPUI-761 | Introduced `SubmissionControllerTest` and made SubmissionController return get submission URI

* CCMSPUI-761 | Added call to bulk claims submission API to BulkClaimService. Also added user ID to submission process and introduced `BulkClaimInvalidFileException` to handle HTTP status code 415.

* CCMSPUI-761 | Added submitBulkClaim test for BulkClaimService and made MockServerIntegrationTest more stable when docker is not available

* CCMSPUI-761 | Fixed testcontainers tests

* CCMSPUI-761 | Re-enabled BulkClaimsSubmissionApiClientIntegrationTest

* CCMSPUI-761 | Added missing 200 response file for get office schedule integration test

* CCMSPUI-761 | Added new BulkClaimValidationException to handle validation issues. Also updated Javadocs.

---------
