# bulk-claim-api/open-api-specification.yml
@@ -18,6 +18,8 @@ paths:
                 $ref: "#/components/schemas/Items"
         '400':
           description: 'Bad request'
+        '415':
+          description: 'Unsupported Media Type'
         '401':
           description: 'Unauthorized'
         '403':
@@ -141,8 +143,58 @@ paths:
         '500':
           description: 'Internal server error'
 
+  /api/v1/submissions:
+    post:
+      summary:
+        Submits a claim in the format of CSV or XML, which is then processed and forwarded
+        to the Claims API.
+      operationId: postSubmission
+      tags:
+        - submissions
+      parameters:
+        - name: userId
+          in: query
+          required: true
+          description: The user ID of the user performing the bulk submission
+          schema:
+            type: string
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                file:
+                  type: string
+                  format: binary
+                  description: The submission file in CSV or XML format
+              required:
+                - file
+      
+      responses:
+        '201':
+          description: 'Created'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SubmissionResponse'
+        '400':
+          description: 'Bad Request'
+        '401':
+          description: 'Unauthorized'
+        '403':
+          description: 'Forbidden'
+        '500':
+          description: 'Internal server error'
+
 components:
   schemas:
+    SubmissionResponse:
+      required:
+        - submission-id
+      properties:
+        submission-id:
+          type: string
     Item:
       required:
         - id
